// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZStepper renders a default stepper component 1`] = `
<div class="z-stepper flex">
  <div class="z-step w-1/2 mr-0 w-1/3 flex-shrink-0 flex-grow-0">
    <div class="z-step__head relative w-full">
      <!---->
      <div class="z-step__icon rounded-full w-6 h-6 bg-ink-200">
        <!---->
      </div>
    </div>
    <div class="z-step__main">
      <div class="z-step__title text-xs uppercase text-slate font-medium mt-4 tracking-wider leading-snug">step1</div>
      <div class="z-step__description font-bold leading-6 mt-1 text-vanilla-400"></div>
    </div>
  </div>
  <div class="z-step w-1/2 mr-0 w-1/3 flex-shrink-0 flex-grow-0">
    <div class="z-step__head relative w-full">
      <!---->
      <div class="z-step__icon rounded-full w-6 h-6 bg-ink-200">
        <!---->
      </div>
    </div>
    <div class="z-step__main">
      <div class="z-step__title text-xs uppercase text-slate font-medium mt-4 tracking-wider leading-snug">step2</div>
      <div class="z-step__description font-bold leading-6 mt-1 text-vanilla-400"></div>
    </div>
  </div>
  <div class="z-step w-1/2 mr-0 w-1/3 flex-shrink-0 flex-grow-0">
    <div class="z-step__head relative w-full">
      <!---->
      <div class="z-step__icon rounded-full w-6 h-6 bg-ink-200">
        <!---->
      </div>
    </div>
    <div class="z-step__main">
      <div class="z-step__title text-xs uppercase text-slate font-medium mt-4 tracking-wider leading-snug">step3</div>
      <div class="z-step__description font-bold leading-6 mt-1 text-vanilla-400"></div>
    </div>
  </div>
</div>
`;

exports[`ZStepper renders a stepper component with status from the Step 1`] = `
<div class="z-stepper flex">
  <div class="z-step w-1/2 mr-0 w-1/3 flex-shrink-0 flex-grow-0">
    <div class="z-step__head relative w-full completed">
      <!---->
      <div class="z-step__icon rounded-full w-6 h-6 bg-juniper"><span class="text-vanilla-100 flex justify-center items-center text-base h-full font-bold">✓</span></div>
    </div>
    <div class="z-step__main">
      <div class="z-step__title text-xs uppercase text-slate font-medium mt-4 tracking-wider leading-snug">Step 1</div>
      <div class="z-step__description font-bold leading-6 mt-1 text-vanilla-200">Some description</div>
    </div>
  </div>
  <div class="z-step w-1/2 mr-0 w-1/3 flex-shrink-0 flex-grow-0">
    <div class="z-step__head relative w-full active">
      <!---->
      <div class="z-step__icon rounded-full w-6 h-6 bg-robin">
        <!---->
      </div>
    </div>
    <div class="z-step__main">
      <div class="z-step__title text-xs uppercase text-slate font-medium mt-4 tracking-wider leading-snug">Step 2</div>
      <div class="z-step__description font-bold leading-6 mt-1 text-vanilla-200">Some description</div>
    </div>
  </div>
  <div class="z-step w-1/2 mr-0 w-1/3 flex-shrink-0 flex-grow-0">
    <div class="z-step__head relative w-full">
      <!---->
      <div class="z-step__icon rounded-full w-6 h-6 bg-ink-200">
        <!---->
      </div>
    </div>
    <div class="z-step__main">
      <div class="z-step__title text-xs uppercase text-slate font-medium mt-4 tracking-wider leading-snug">Step 3</div>
      <div class="z-step__description font-bold leading-6 mt-1 text-vanilla-400">Some description</div>
    </div>
  </div>
</div>
`;

exports[`ZStepper renders a stepper component with status passed from the Parent Component 1`] = `
<div class="z-stepper flex">
  <div class="z-step w-1/2 mr-0 w-1/3 flex-shrink-0 flex-grow-0">
    <div class="z-step__head relative w-full">
      <!---->
      <div class="z-step__icon rounded-full w-6 h-6 bg-ink-200">
        <!---->
      </div>
    </div>
    <div class="z-step__main">
      <div class="z-step__title text-xs uppercase text-slate font-medium mt-4 tracking-wider leading-snug">Step 1</div>
      <div class="z-step__description font-bold leading-6 mt-1 text-vanilla-400">Some description</div>
    </div>
  </div>
  <div class="z-step w-1/2 mr-0 w-1/3 flex-shrink-0 flex-grow-0">
    <div class="z-step__head relative w-full">
      <!---->
      <div class="z-step__icon rounded-full w-6 h-6 bg-ink-200">
        <!---->
      </div>
    </div>
    <div class="z-step__main">
      <div class="z-step__title text-xs uppercase text-slate font-medium mt-4 tracking-wider leading-snug">Step 2</div>
      <div class="z-step__description font-bold leading-6 mt-1 text-vanilla-400">Some description</div>
    </div>
  </div>
  <div class="z-step w-1/2 mr-0 w-1/3 flex-shrink-0 flex-grow-0">
    <div class="z-step__head relative w-full">
      <!---->
      <div class="z-step__icon rounded-full w-6 h-6 bg-ink-200">
        <!---->
      </div>
    </div>
    <div class="z-step__main">
      <div class="z-step__title text-xs uppercase text-slate font-medium mt-4 tracking-wider leading-snug">Step 3</div>
      <div class="z-step__description font-bold leading-6 mt-1 text-vanilla-400">Some description</div>
    </div>
  </div>
</div>
`;
